@@ -3,6 +3,8 @@
 This file documents user visible changes between versions of StumpWM
 
 * Changes since 0.9.2
+** new command modifiers
+
 ** new command grouplist and binding C-c g "
 
 ** New keybinding C-t h c
